# repo-info.py

./: .gitignore  Makefile  README.md  pyproject.toml  repo-info.py  repo-info.sh.tmpl
